--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,4 @@ author:
 
 # Custom vars
 github:
-  repo:           https://github.com/aik099/qa-tools
+  repo:           https://github.com/qa-tools/qa-tools
