--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ gems:
 markdown:         redcarpet
 redcarpet:
     extensions:   ["autolink", "tables"]
-highlighter:      pygments
+pygments:         true
 
 # Permalinks
 permalink:        pretty
