--- a/_config.yml
+++ b/_config.yml
@@ -27,3 +27,6 @@ author:
 # Custom vars
 github:
   repo:           https://github.com/qa-tools/qa-tools
+
+api:
+  url:            http://api.qa-tools.io/master/index.html
